2015-08-14  Carlos Garcia Campos  <cgarcia@igalia.com>

        Unreviewed. Update OptionsGTK.cmake and NEWS for 2.9.90 release.

        * Source/cmake/OptionsGTK.cmake: Bump version numbers.

2015-08-12  Alex Christensen  <achristensen@webkit.org>

        Fix Debug CMake builds on Windows
        https://bugs.webkit.org/show_bug.cgi?id=147940

        Reviewed by Chris Dumez.

        * Source/cmake/OptionsWindows.cmake:
        Put 32-bit binaries in a bin32 subdirectory and 64-bit binaries in a bin64 subdirectory.

2015-08-10  Alex Christensen  <achristensen@webkit.org>

        Build TestWebKitAPI with CMake on Windows
        https://bugs.webkit.org/show_bug.cgi?id=147851

        Reviewed by Chris Dumez.

        * Source/cmake/OptionsWindows.cmake:
        Enable api tests and set USE_SYSTEM_MALLOC to avoid warnings when redefining it.

2015-08-06  Alex Christensen  <achristensen@webkit.org>

        [Win] CMake build fix after r188098.

        * Source/cmake/OptionsWinCairo.cmake:
        OptionsWindows.cmake uses WTF_PLATFORM_WIN_CAIRO now, so we need to set it before including OptionsWindows.

2015-08-04  Alex Christensen  <achristensen@webkit.org>

        Fix quirks with CMake and VS2015
        https://bugs.webkit.org/show_bug.cgi?id=147663

        Reviewed by Brent Fulgham.

        * Source/cmake/OptionsWindows.cmake:
        Hide some warnings.  Using the same variable names in nested scopes is ok for now.
        Disable INTL for now.

2015-08-04  Alex Christensen  <achristensen@webkit.org>

        Enable WebGL on Windows CMake build.
        https://bugs.webkit.org/show_bug.cgi?id=143311

        Reviewed by Csaba Osztrogonác.

        * Source/cmake/OptionsWindows.cmake:
        Enable WebGL by default in CMake builds now that it works.

2015-08-04  Mario Sanchez Prada  <mario@endlessm.com>

        [GTK] Accelerated 2D Canvas enabled when cairo-gl is not available
        https://bugs.webkit.org/show_bug.cgi?id=147625
