@@ -52,11 +52,15 @@ if (GTK3_VERSION AND VERSION_OK)
     pkg_check_modules(GTK3_X11 gtk+-x11-3.0)
     if ("${GTK3_X11_VERSION}" VERSION_EQUAL "${GTK3_VERSION}")
         set(GTK3_SUPPORTS_X11 TRUE)
+    else ()
+        set(GTK3_SUPPORTS_X11 FALSE)
     endif ()
 
     pkg_check_modules(GTK3_WAYLAND gtk+-wayland-3.0)
     if ("${GTK3_WAYLAND_VERSION}" VERSION_EQUAL "${GTK3_VERSION}")
         set(GTK3_SUPPORTS_WAYLAND TRUE)
+    else ()
+        set(GTK3_SUPPORTS_WAYLAND FALSE)
     endif ()
 
     if (NOT("${GTK3_VERSION}" VERSION_LESS "3.14.0"))
